# codex_remote

./: .env.example  .gitignore  AGENTS.md  README.md  package.json
docs/: README.md  architecture.md  auth.md  events.md  fastapi-control-plane.md  installation.md  repo-structure.md  security.md  self-hosting.md  vision.md
docs/governance/: agent-operating-model.md
memory/: known-gaps.md  project-summary.md
migrations/: 003_anchor_sessions.sql
public/: _headers
scripts/: task-cli.ts
services/anchor/: README.md
services/control-plane/: README.md  pyproject.toml
services/control-plane/app/: auth.py  relay.py
services/control-plane/tests/: test_integration.py
services/orbit/: README.md
services/orbit-deno/: README.md  jwt.test.ts  jwt.ts  orbit-relay-state.ts
src/lib/: account-auth-card.test.ts  account-auth-card.ts  anchors.svelte.ts  anchors.test.ts  api.test.ts  artifacts.svelte.ts  artifacts.test.ts  artifacts.ts  auth.svelte.ts  auth.test.ts  connection-manager.test.ts  csp-fonts.test.ts  home-pane-models.test.ts  home-pane-models.ts  i18n.svelte.ts  i18n.test.ts  message-limits.test.ts  messages.svelte.ts  messages.test.ts  model-defaults.test.ts  model-defaults.ts  models.svelte.ts  models.test.ts  release-cockpit.svelte.ts  release-cockpit.test.ts  release-cockpit.ts  session-search.test.ts  session-search.ts  socket.svelte.ts  socket.test.ts  thread-layout.test.ts  thread-layout.ts  thread-permissions.test.ts  thread-permissions.ts  thread-route.test.ts  thread-route.ts  thread-turn.test.ts  thread-turn.ts  threads.test.ts  (+4 more)
tasks/: README.md
(+152 files in other folders)
